--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 @import url("https://fonts.googleapis.com/css2?family=Spartan:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=STIX+Two+Text:wght@400;700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap");
 
 /*
@@ -32,6 +32,9 @@ $mobile: 539px;
 // body{
 // 	width: 100%;
 // 	overflow-x: hidden;
+// }
+// body {
+// 	overflow: hidden;
 // }
 
 //  header ---------------------------------------------------------------
@@ -101,15 +104,32 @@ $mobile: 539px;
 						background: #fff;
 						display: none;
 						z-index: 3;
+						box-sizing: border-box;
 
 						.left {
-							width: 30%;
+							width: 20%;
 							height: 100%;
-							background: lightgreen;
+							background: #fff;
 							float: left;
+
+							.pic {
+								width: 100px;
+								height: 100px;
+
+								img {
+									width: 100%;
+									height: 100%;
+								}
+							}
+						}
+						.center {
+							width: 40%;
+							height: 100%;
+							background: #fff;
+							float: right;
 						}
 						.right {
-							width: 70%;
+							width: 40%;
 							height: 100%;
 							background: #fff;
 							float: right;
@@ -122,11 +142,12 @@ $mobile: 539px;
 							position: absolute;
 							top: 0;
 							left: -100%;
-							background: lightgreen;
+							background: #fff;
 						}
 						&::after {
 							content: "";
 							display: block;
+							clear: both;
 							width: 100%;
 							height: 100%;
 							position: absolute;
@@ -423,8 +444,8 @@ $mobile: 539px;
 		.wrap {
 			width: 100%;
 			text-align: center;
-			
-			input[type="text"]{
+
+			input[type="text"] {
 				width: 100%;
 				height: 40px;
 				padding-left: 20px;
@@ -441,17 +462,16 @@ $mobile: 539px;
 				box-sizing: border-box;
 				margin-bottom: 20px;
 			}
-			input[type="checkbox"]{
-				width: 20px; height: 20px;
-				vertical-align: middle; 
-				
+			input[type="checkbox"] {
+				width: 20px;
+				height: 20px;
+				vertical-align: middle;
 			}
-			
+
 			label {
 				font: 13px/1 "Noto Sans KR";
 				margin-left: 4px;
 				color: #aaa;
-				
 			}
 			a {
 				display: inline-block;
@@ -469,7 +489,7 @@ $mobile: 539px;
 			height: 25px;
 			background: rgb(66, 66, 73);
 			border-radius: 50%;
-			border:1px solid #ccc;
+			border: 1px solid #ccc;
 			text-align: center;
 			position: absolute;
 			top: 10px;
@@ -1105,7 +1125,7 @@ $mobile: 539px;
 							height: 90px;
 							margin-bottom: 10px;
 							opacity: 0.4;
-							box-shadow:5px 5px 5px rgba(0, 0, 0, 0.1);
+							box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
 
 							&:nth-of-type(1) {
 								background: url(../img/phone03.jpg) no-repeat
@@ -1339,6 +1359,19 @@ $mobile: 539px;
 			}
 		}
 	}
+}
+
+// cursor_pointer ------------------------------------------
+.result {
+	position: absolute;
+	top: 0;
+	left: 0;
+	background: #000;
+	width: 30px;
+	height: 30px;
+	opacity: 0.4;
+	border-radius: 100%;
+	transform: translate(-50%, -50%);
 }
 
 //  tablet ------------------------------------------------------------------
