--- a/css/style.css
+++ b/css/style.css
@@ -1849,8 +1849,9 @@ fieldset {
       .location .inner .branch lihover.on .address {
         color: pink; }
 
-cursor {
-  z-index: 5; }
+body {
+  width: 100%;
+  overflow-x: hidden; }
 
 #header {
   width: 100%;
@@ -1900,29 +1901,34 @@ cursor {
           height: 300px;
           position: absolute;
           top: 51px;
-          right: 0;
+          right: -230px;
           background: #fff;
           display: none;
           z-index: 3;
           box-sizing: border-box; }
-          #header .inner .menuWeb #gnb > li .sub .left {
-            width: 20%;
+          #header .inner .menuWeb #gnb > li .sub .line1 {
+            width: 25%;
             height: 100%;
             background: #fff;
             float: left; }
-            #header .inner .menuWeb #gnb > li .sub .left .pic {
+            #header .inner .menuWeb #gnb > li .sub .line1 .pic {
               width: 100px;
               height: 100px; }
-              #header .inner .menuWeb #gnb > li .sub .left .pic img {
+              #header .inner .menuWeb #gnb > li .sub .line1 .pic img {
                 width: 100%;
                 height: 100%; }
-          #header .inner .menuWeb #gnb > li .sub .center {
-            width: 40%;
+          #header .inner .menuWeb #gnb > li .sub .line2 {
+            width: 25%;
             height: 100%;
             background: #fff;
             float: right; }
-          #header .inner .menuWeb #gnb > li .sub .right {
-            width: 40%;
+          #header .inner .menuWeb #gnb > li .sub .line3 {
+            width: 25%;
+            height: 100%;
+            background: #fff;
+            float: right; }
+          #header .inner .menuWeb #gnb > li .sub .line4 {
+            width: 25%;
             height: 100%;
             background: #fff;
             float: right; }
@@ -1930,23 +1936,24 @@ cursor {
             content: "";
             display: block;
             width: 100%;
-            height: 100%;
+            height: 300px;
             position: absolute;
             top: 0;
             left: -100%;
-            background: #fff; }
+            background: #efefef; }
           #header .inner .menuWeb #gnb > li .sub::after {
             content: "";
             display: block;
             clear: both;
             width: 100%;
-            height: 100%;
+            height: 300px;
             position: absolute;
             top: 0;
             right: -100%;
-            background: inherit; }
+            background: #efefef;
+            box-sizing: border-box; }
         #header .inner .menuWeb #gnb > li:hover a {
-          color: #d8778f; }
+          color: #3b1d24; }
     #header .inner .menuWeb .util {
       position: absolute;
       bottom: 20%;
@@ -2839,7 +2846,8 @@ cursor {
   height: 40px;
   opacity: 0.7;
   border-radius: 100%;
-  transform: translate(-50%, -50%); }
+  transform: translate(-50%, -50%);
+  z-index: 3; }
 
 @media screen and (max-width: 1179px) {
   #header .inner {
