--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,22 +29,20 @@ $mobile: 539px;
 	margin-bottom: $mb;
 }
 
-// body{
-// 	width: 100%;
-// 	overflow-x: hidden;
-// }
+body{
+	width: 100%;
+	overflow-x: hidden;
+}
 // body {
 // 	overflow: hidden;
 // }
 
-cursor {
-	z-index: 5;
-}
 
 //  header ---------------------------------------------------------------
 #header {
 	width: 100%;
 	background: #fff;
+	// border-bottom: 1px solid #aaa;
 	// overflow: hidden;
 
 	.inner {
@@ -104,14 +102,15 @@ cursor {
 						height: 300px;
 						position: absolute;
 						top: 51px;
-						right: 0;
+						right: -230px;
 						background: #fff;
+						// border-top: 1px solid #555;
 						display: none;
 						z-index: 3;
 						box-sizing: border-box;
 
-						.left {
-							width: 20%;
+						.line1 {
+							width: 25%;
 							height: 100%;
 							background: #fff;
 							float: left;
@@ -126,14 +125,20 @@ cursor {
 								}
 							}
 						}
-						.center {
-							width: 40%;
+						.line2 {
+							width: 25%;
 							height: 100%;
 							background: #fff;
 							float: right;
 						}
-						.right {
-							width: 40%;
+						.line3 {
+							width: 25%;
+							height: 100%;
+							background: #fff;
+							float: right;
+						}
+						.line4 {
+							width: 25%;
 							height: 100%;
 							background: #fff;
 							float: right;
@@ -142,26 +147,30 @@ cursor {
 							content: "";
 							display: block;
 							width: 100%;
-							height: 100%;
+							height: 300px;
 							position: absolute;
 							top: 0;
 							left: -100%;
-							background: #fff;
+							background: #efefef;
+							// border-top: 1px solid #555;
+
 						}
 						&::after {
 							content: "";
 							display: block;
 							clear: both;
 							width: 100%;
-							height: 100%;
+							height: 300px;
 							position: absolute;
 							top: 0;
 							right: -100%;
-							background: inherit;
+							background: #efefef;
+							// border-top: 1px solid #555;
+							box-sizing: border-box;
 						}
 					}
 					&:hover a {
-						color: rgb(216, 119, 143);
+						color: rgb(59, 29, 36);
 					}
 				}
 			}
@@ -1376,6 +1385,7 @@ cursor {
 	opacity: 0.7;
 	border-radius: 100%;
 	transform: translate(-50%, -50%);
+	z-index: 3;
 }
 
 //  tablet ------------------------------------------------------------------
