--- a/css/style.css
+++ b/css/style.css
@@ -1906,32 +1906,92 @@ body {
           display: none;
           z-index: 3;
           box-sizing: border-box; }
+          #header .inner .menuWeb #gnb > li .sub a {
+            color: #111; }
           #header .inner .menuWeb #gnb > li .sub .line1 {
             width: 25%;
             height: 100%;
             background: #fff;
-            float: left; }
+            float: left;
+            margin-right: 55px; }
+            #header .inner .menuWeb #gnb > li .sub .line1 h2 {
+              display: inline-block;
+              font: bold 22px/1 "Spartan";
+              border-bottom: 2px solid #555;
+              margin-bottom: 22px;
+              margin-top: 40px;
+              padding-bottom: 10px; }
             #header .inner .menuWeb #gnb > li .sub .line1 .pic {
-              width: 100px;
-              height: 100px; }
+              width: 230px;
+              height: 180px; }
               #header .inner .menuWeb #gnb > li .sub .line1 .pic img {
                 width: 100%;
                 height: 100%; }
           #header .inner .menuWeb #gnb > li .sub .line2 {
-            width: 25%;
+            width: 20%;
             height: 100%;
             background: #fff;
-            float: right; }
+            float: left;
+            text-align: center;
+            padding-top: 65px;
+            margin-right: 40px; }
+            #header .inner .menuWeb #gnb > li .sub .line2 .btns {
+              display: inline-block;
+              width: 200px;
+              height: 50px;
+              border: 1px solid #111;
+              font: bold 18px/50px "Spartan";
+              color: #111;
+              margin-bottom: 30px; }
+            #header .inner .menuWeb #gnb > li .sub .line2 li {
+              font: 16px/1 "Spartan";
+              margin-bottom: 13px; }
+              #header .inner .menuWeb #gnb > li .sub .line2 li a {
+                text-align: left;
+                color: #111; }
           #header .inner .menuWeb #gnb > li .sub .line3 {
-            width: 25%;
+            width: 20%;
             height: 100%;
             background: #fff;
-            float: right; }
+            float: left;
+            text-align: center;
+            padding-top: 65px;
+            margin-right: 40px; }
+            #header .inner .menuWeb #gnb > li .sub .line3 .btns {
+              display: inline-block;
+              width: 200px;
+              height: 50px;
+              border: 1px solid #111;
+              font: bold 18px/50px "Spartan";
+              color: #111;
+              margin-bottom: 30px; }
+            #header .inner .menuWeb #gnb > li .sub .line3 li {
+              font: 16px/1 "Spartan";
+              margin-bottom: 13px; }
+              #header .inner .menuWeb #gnb > li .sub .line3 li a {
+                text-align: left;
+                color: #111; }
           #header .inner .menuWeb #gnb > li .sub .line4 {
-            width: 25%;
+            width: 20%;
             height: 100%;
             background: #fff;
-            float: right; }
+            float: left;
+            padding-top: 65px;
+            text-align: center; }
+            #header .inner .menuWeb #gnb > li .sub .line4 .btns {
+              display: inline-block;
+              width: 200px;
+              height: 50px;
+              border: 1px solid #111;
+              font: bold 18px/50px "Spartan";
+              color: #111;
+              margin-bottom: 30px; }
+            #header .inner .menuWeb #gnb > li .sub .line4 li {
+              font: 16px/1 "Spartan";
+              margin-bottom: 13px; }
+              #header .inner .menuWeb #gnb > li .sub .line4 li a {
+                text-align: left;
+                color: #111; }
           #header .inner .menuWeb #gnb > li .sub::before {
             content: "";
             display: block;
@@ -1940,9 +2000,9 @@ body {
             position: absolute;
             top: 0;
             left: -100%;
-            background: #efefef; }
+            background: #fff; }
           #header .inner .menuWeb #gnb > li .sub::after {
-            content: "";
+            content: "lorem is lorem";
             display: block;
             clear: both;
             width: 100%;
@@ -1950,10 +2010,10 @@ body {
             position: absolute;
             top: 0;
             right: -100%;
-            background: #efefef;
+            background: #fff;
             box-sizing: border-box; }
         #header .inner .menuWeb #gnb > li:hover a {
-          color: #3b1d24; }
+          color: #ee93a9; }
     #header .inner .menuWeb .util {
       position: absolute;
       bottom: 20%;
