--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,14 +29,13 @@ $mobile: 539px;
 	margin-bottom: $mb;
 }
 
-body{
+body {
 	width: 100%;
 	overflow-x: hidden;
 }
 // body {
 // 	overflow: hidden;
 // }
-
 
 //  header ---------------------------------------------------------------
 #header {
@@ -104,20 +103,32 @@ body{
 						top: 51px;
 						right: -230px;
 						background: #fff;
-						// border-top: 1px solid #555;
 						display: none;
 						z-index: 3;
 						box-sizing: border-box;
 
+						a {
+							color: #111;
+						}
+					
 						.line1 {
 							width: 25%;
 							height: 100%;
 							background: #fff;
 							float: left;
+							margin-right: 55px;
 
+							h2 {
+								display: inline-block;
+								font: bold 22px/1 "Spartan";
+								border-bottom: 2px solid #555;
+								margin-bottom: 22px;
+								margin-top: 40px;
+								padding-bottom: 10px;
+							}
 							.pic {
-								width: 100px;
-								height: 100px;
+								width: 230px;
+								height: 180px;
 
 								img {
 									width: 100%;
@@ -126,22 +137,84 @@ body{
 							}
 						}
 						.line2 {
-							width: 25%;
+							width: 20%;
 							height: 100%;
 							background: #fff;
-							float: right;
+							float: left;
+							text-align: center;
+							padding-top: 65px;
+							margin-right: 40px;
+
+							.btns {
+								display: inline-block;
+								width: 200px;
+								height: 50px;
+								border: 1px solid #111;
+								font: bold 18px/50px "Spartan";
+								color: #111;
+								margin-bottom: 30px;
+							}
+							li {
+								font: 16px/1 "Spartan";
+								margin-bottom: 13px;
+								a {
+									text-align: left;
+									color: #111;
+								}
+							}
 						}
 						.line3 {
-							width: 25%;
+							width: 20%;
 							height: 100%;
 							background: #fff;
-							float: right;
+							float: left;
+							text-align: center;
+							padding-top: 65px;
+							margin-right: 40px;
+
+							.btns {
+								display: inline-block;
+								width: 200px;
+								height: 50px;
+								border: 1px solid #111;
+								font: bold 18px/50px "Spartan";
+								color: #111;
+								margin-bottom: 30px;
+							}
+							li {
+								font: 16px/1 "Spartan";
+								margin-bottom: 13px;
+								a {
+									text-align: left;
+									color: #111;
+								}
+							}
 						}
 						.line4 {
-							width: 25%;
+							width: 20%;
 							height: 100%;
 							background: #fff;
-							float: right;
+							float: left;
+							padding-top: 65px;
+							text-align: center;
+
+							.btns {
+								display: inline-block;
+								width: 200px;
+								height: 50px;
+								border: 1px solid #111;
+								font: bold 18px/50px "Spartan";
+								color: #111;
+								margin-bottom: 30px;
+							}
+							li {
+								font: 16px/1 "Spartan";
+								margin-bottom: 13px;
+								a {
+									text-align: left;
+									color: #111;
+								}
+							}
 						}
 						&::before {
 							content: "";
@@ -151,12 +224,11 @@ body{
 							position: absolute;
 							top: 0;
 							left: -100%;
-							background: #efefef;
+							background: #fff;
 							// border-top: 1px solid #555;
-
 						}
 						&::after {
-							content: "";
+							content: "lorem is lorem";
 							display: block;
 							clear: both;
 							width: 100%;
@@ -164,13 +236,13 @@ body{
 							position: absolute;
 							top: 0;
 							right: -100%;
-							background: #efefef;
+							background: #fff;
 							// border-top: 1px solid #555;
 							box-sizing: border-box;
 						}
 					}
 					&:hover a {
-						color: rgb(59, 29, 36);
+						color: rgb(238, 147, 169);
 					}
 				}
 			}
